2025-XX Feature Update for Version Next (5.0.x)

--- a/about copy.html
+++ b/about copy.html
@@ -66,48 +66,44 @@
         style="background-image: url(img/bg-img/hero-bg-small.png); height: 100vh;">
         <div class="wbnrfz_details">
             <div class="container">
-                <div class="portfolio-controls d-flex justify-content-between align-items-center">
-                    <!-- Filter Buttons -->
-                    <div class="portfolio-filter mt-3">
-                        <div class="col-lg-12">
-                            <div class="main-title">
-                                <nav aria-label="breadcrumb">
-                                    <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html">
-                                                Home</a>
-                                        </li>
-                                        <li class="breadcrumb-item"><a
-                                                href="https://nurafianzulkifli.com/works-by-nrfz.html">
-                                                About
-                                            </a>
-                                        </li>
-                                    </ol>
-                                </nav>
-                                <h1 class="brc">About Me</h1>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Collapsible Header -->
-                    <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
-                        aria-expanded="false" aria-controls="portfolioFilter" style="cursor: pointer;">
-                        <i class="fa-solid fa-chevron-down nav-chev"></i>
+                <div class="col-lg-12">
+                    <div class="main-title">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a></li>
+                                <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/works-by-nrfz.html"> About</a></li>
+                            </ol>
+                        </nav>
+                        <h1>About Me</h1>
                     </div>
                 </div>
+            </div>
+        
+            <!-- Toggle Button for Mobile -->
+            <div class="container text-center">
+                <button class="btn btn-primary mb-3 toggle-btn d-md-none" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsible-content" aria-expanded="false" aria-controls="collapsible-content">
+                    Toggle Content
+                </button>
+        
                 <!-- Collapsible Content -->
-                <div id="portfolioFilter" class="collapse">
-                    <div class="portfolio-filter mt-3">
-                        <a href="#summary">
-                            <button class="btn">Summary</button>
-                        </a>
-                        <a href="#tm">
-                            <button class="btn">Timelines & Milestones</button>
-                        </a>
-                        <a href="#lppl">
-                            <button class="btn">Language Proficiency</button>
-                        </a>
-                        <a href="#lppl">
-                            <button class="btn">Programming Languages</button>
-                        </a>
+                <div class="collapse show d-md-block" id="collapsible-content">
+                    <div class="portfolio-controls">
+                        <!-- Filter Buttons -->
+                        <div class="portfolio-filter">
+                            <a href="#summary">
+                                <button class="btn">Summary</button>
+                            </a>
+                            <a href="#tm">
+                                <button class="btn">Timelines & Milestones</button>
+                            </a>
+                            <a href="#lppl">
+                                <button class="btn">Language Proficiency</button>
+                            </a>
+                            <a href="#lppl">
+                                <button class="btn">Programming Languages</button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
