--- a/eicw.html
+++ b/eicw.html
@@ -64,50 +64,54 @@
     </header>
 
     <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
-        style="background-image: url(eicw/img/cover-light.png); height: 100vh;">
-        <div class="wbnrfz_details">
-            <div class="container">
-                <div class="col-lg-12">
-                    <div class="main-title">
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
-                                </li>
-                                <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/works-by-nrfz.html">
-                                        EICW
-                                    </a>
-                                </li>
-                            </ol>
-                        </nav>
-                        <h1>Experimenting Improvements of Current Wayfinding</h1>
+    style="background-image: url(eicw/img/cover-light.png); height: 100vh;">
+    <div class="wbnrfz_details">
+        <div class="container">
+            <div class="portfolio-controls d-flex justify-content-between align-items-center">
+                <!-- Filter Buttons -->
+                <div class="portfolio-filter mt-3">
+                    <div class="col-lg-12">
+                        <div class="main-title">
+                            <nav aria-label="breadcrumb">
+                                <ol class="breadcrumb">
+                                    <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
+                                    </li>
+                                    <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/works-by-nrfz.html">
+                                            EICW
+                                        </a>
+                                    </li>
+                                </ol>
+                            </nav>
+                            <h1 class="brc">Experimenting Improvements of Current Wayfinding</h1>
+                        </div>
                     </div>
                 </div>
-
-
-            </div>
-
-            <div class="container">
-                <div class="portfolio-controls">
-                    <!-- Filter Buttons -->
-                    <div class="portfolio-filter">
-                        <a href="#">
-                            <button class="btn">Improving Existing Wayfinding Designs.</button>
-                        </a>
-                        <a href="#tm">
-                            <button class="btn">Let's get more experimental!</button>
-                        </a>
-                        <a href="#lppl">
-                            <button class="btn">Showcasing my own ideas.</button>
-                        </a>
-                        <a href="#lppl">
-                            <button class="btn">CCL6 and the way forward.</button>
-                        </a>
-                    </div>
+                <!-- Collapsible Header -->
+                <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
+                     aria-controls="portfolioFilter" style="cursor: pointer;">
+                    <i class="fa-solid fa-chevron-down nav-chev"></i>
                 </div>
             </div>
-
+            <!-- Collapsible Content -->
+            <div id="portfolioFilter" class="collapse">
+                <div class="portfolio-filter mt-3">
+                    <a href="#">
+                        <button class="btn">Improving Existing Wayfinding Designs.</button>
+                    </a>
+                    <a href="#tm">
+                        <button class="btn">Let's get more experimental!</button>
+                    </a>
+                    <a href="#lppl">
+                        <button class="btn">Showcasing my own ideas.</button>
+                    </a>
+                    <a href="#lppl">
+                        <button class="btn">CCL6 and the way forward.</button>
+                    </a>
+                </div>
+            </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <section class="about-me-sum clearfix">
         <div class="wbnrfz_eicw">
