--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -80,7 +80,7 @@
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
                     </li>
-                    <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/works-by-nrfz.html"> Works By NRFZ
+                    <li class="breadcrumb-item active"><a href="https://nurafianzulkifli.com/works-by-nrfz.html"> Works By NRFZ
                       </a>
                     </li>
                   </ol>
@@ -91,7 +91,7 @@
           </div>
           <!-- Collapsible Header -->
           <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
-            aria-expanded="false" aria-controls="portfolioFilter" style="cursor: pointer;">
+            aria-expanded="false" aria-controls="portfolioFilter" style="cursor: pointer;"  title="Filter/Sort">
             <i class="fa-solid fa-chevron-down nav-chev"></i>
           </div>
         </div>
