--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,7 @@
 
     <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
     style="background-image: url(img/bg-img/hero-bg-small.png); height: 100vh;">
-    <div class="wbnrfz_details">
+    <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
           <!-- Filter Buttons -->
@@ -74,7 +74,7 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
                             </li>
-                            <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/works-by-nrfz.html">
+                            <li class="breadcrumb-item active"><a href="https://nurafianzulkifli.com/works-by-nrfz.html">
                                     Blog
                                 </a>
                             </li>
@@ -86,7 +86,7 @@
           </div>
           <!-- Collapsible Header -->
           <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
-            aria-expanded="false" aria-controls="portfolioFilter" style="cursor: pointer;">
+            aria-expanded="false" aria-controls="portfolioFilter" style="cursor: pointer;" title="Filter/Sort">
             <i class="fa-solid fa-chevron-down nav-chev"></i>
           </div>
         </div>
