--- a/eicw.html
+++ b/eicw.html
@@ -65,7 +65,7 @@
 
     <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
     style="background-image: url(eicw/img/cover-light.png); height: 100vh;">
-    <div class="wbnrfz_details">
+    <div class="wbnrfz_details_blog">
         <div class="container">
             <div class="portfolio-controls d-flex justify-content-between align-items-center">
                 <!-- Filter Buttons -->
@@ -76,7 +76,7 @@
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
                                     </li>
-                                    <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/works-by-nrfz.html">
+                                    <li class="breadcrumb-item active"><a href="https://nurafianzulkifli.com/works-by-nrfz.html">
                                             EICW
                                         </a>
                                     </li>
@@ -88,7 +88,7 @@
                 </div>
                 <!-- Collapsible Header -->
                 <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
-                     aria-controls="portfolioFilter" style="cursor: pointer;">
+                     aria-controls="portfolioFilter" style="cursor: pointer;" title="Jump To">
                     <i class="fa-solid fa-chevron-down nav-chev"></i>
                 </div>
             </div>
