--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -39,7 +39,7 @@
   <!-- Preloader Section -->
   <div id="preloader">
     <div class="loader"></div>
-          <p id="preloader-text">Just a moment...</p>
+    <p id="preloader-text">Just a moment...</p>
   </div>
 
 
@@ -64,82 +64,74 @@
     </nav>
   </header>
 
-
-
   <section class="wbnrfz-summ-indiv breadcrumb-area-eicw-cover bg-img parallax" id="cv-eicw"
     style="background-image: url(https://i.imgur.com/sBOOEqY.png); height: 100vh;">
-    <div class="wbnrfz_details wbnrfz_details_indiv">
+    <div class="wbnrfz_details">
       <div class="container">
-        <div class="col-lg-12">
-          <div class="main-title">
-            <span>LTA's New Wayfinding System</span>
-            <h1>Experimenting Improvements of Current Wayfinding</h1>
-          </div>
-        </div>
-
-        <div class="details_catagory_wrap">
-          <div class="col-sm-4 single_catagory ">
-            <span>Category</span>
-            <h4>Concepts & Replications</h4>
-          </div>
-          <div class="col-sm-2 single_catagory">
-            <span>Project Year</span>
-            <h4>2024 - Present</h4>
-          </div>
-          <div class="col-sm-2 single_catagory">
-            <span>Share Project</span>
-            <div class="social_links">
-              <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html"
-                title="Facebook">
-                <i class="fa-brands fa-facebook"></i> </a>
-              <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html&text= Experimenting Improvements of Current Wayfinding"
-                title="X (Twitter)">
-                <i class="fa-brands fa-x-twitter"></i></a>
-              <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
-                  class="fa-solid fa-link"></i>
-                <p class="clipboard-copied" style="font-size: 12px;"></p>
-              </a>
+        <div class="portfolio-controls d-flex justify-content-between align-items-center">
+          <!-- Filter Buttons -->
+          <div class="portfolio-filter mt-3">
+            <div class="col-lg-12">
+              <div class="main-title">
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="../works-by-nrfz.html"> Works By NRFZ</a>
+                    </li>
+                    <li class="breadcrumb-item active"><a href="#"> EICW - Implementation Brainstorming
+                      </a>
+                    </li>
+                  </ol>
+                </nav>
+                <h1 class="brc">Experimenting Improvements of Current Wayfinding</h1>
+              </div>
             </div>
           </div>
-          <div class="single_catagory text-center">
-            <a class="btn wbnrfz_btn" href="https://nurafianzulkifli.github.io/eicw/" target="_blank"><i
-                class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Microsite</a>
+          <!-- Collapsible Header -->
+          <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
+            aria-expanded="false" aria-controls="portfolioFilter" style="cursor: pointer;" title="More Details">
+            <i class="fa-solid fa-chevron-down nav-chev"></i>
+          </div>
+        </div>
+        <!-- Collapsible Content -->
+        <div id="portfolioFilter" class="collapse">
+          <div class="details_catagory_wrap">
+            <div class="col-sm-4 single_catagory ">
+              <span>Category</span>
+              <h4>Concepts & Replications</h4>
+            </div>
+            <div class="col-sm-2 single_catagory">
+              <span>Project Year</span>
+              <h4>2024 - Present</h4>
+            </div>
+            <div class="col-sm-2 single_catagory">
+              <span>Share Project</span>
+              <div class="social_links">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html"
+                  title="Facebook">
+                  <i class="fa-brands fa-facebook"></i> </a>
+                <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html&text= Experimenting Improvements of Current Wayfinding"
+                  title="X (Twitter)">
+                  <i class="fa-brands fa-x-twitter"></i></a>
+                <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
+                    class="fa-solid fa-link"></i>
+                  <p class="clipboard-copied" style="font-size: 12px;"></p>
+                </a>
+              </div>
+            </div>
+            <div class="single_catagory text-center">
+              <a class="btn wbnrfz_btn" href="https://nurafianzulkifli.github.io/eicw/" target="_blank"><i
+                  class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Microsite</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- <section class="wbnrfz-summ-indiv breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
-    style="background-image: url(https://i.imgur.com/sBOOEqY.png); height: 100vh;">
-    <div class="wbnrfz_details">
-      <div class="container">
-        <div class="col-lg-12">
-          <div class="main-title">
-            <nav aria-label="breadcrumb">
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
-                </li>
-                <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/works-by-nrfz.html"> Works By NRFZ
-                  </a>
-                </li>
-              </ol>
-            </nav>
-            <h1>Works By NRFZ</h1>
-          </div>
-        </div>
 
 
-      </div>
-
-
-
-    </div>
-  </section> -->
-
-
-  <section class="about-me-summ section-padding-80-0 clearfix">
-    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
+  <section class="about-me-summ clearfix">
+    <div class="wbnrfz_details_section wow fadeIn" data-wow-delay="100ms">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-12">
@@ -161,7 +153,7 @@
             </div>
 
 
-            <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
+            <div class="banner text-center wow fadeIn" data-wow-delay="150ms">
               <a href="https://i.imgur.com/sBOOEqY.png" class="portfolio-img"><img src="https://i.imgur.com/sBOOEqY.png"
                   class="img-fluid" alt="cover-page"></a>
             </div>
@@ -189,27 +181,21 @@
   </section>
 
 
-
   <footer class="footer-area">
     <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="footer-content d-flex align-items-center justify-content-between">
-
-            <div class="copywrite-text">
-              <p>
-                &copy;
-                <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
-              </p>
-            </div>
-
-            <div class="social-info">
-              <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
-              <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-              <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
-              <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
-            </div>
-          </div>
+      <div class="footer-content d-flex flex-column align-items-center text-center">
+        <!-- Social Links -->
+        <div class="social-info">
+          <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
+        </div>
+        <!-- Copywrite Text -->
+        <div class="copywrite-text">
+          <p>&copy;
+            <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
+          </p>
         </div>
       </div>
     </div>
