2025-XX Feature Update for Version Next (5.0.x)

--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -64,9 +64,9 @@
     </nav>
   </header>
 
-  <section class="wbnrfz-summ-indiv breadcrumb-area-eicw-cover bg-img parallax" id="cv-eicw"
-    style="background-image: url(https://i.imgur.com/sBOOEqY.png); height: 100vh;">
-    <div class="wbnrfz_details">
+  <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-eicw"
+    style="background-image: url(../eicw/img/cover-light.png); height: 100vh;">
+    <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
           <!-- Filter Buttons -->
