--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 
     <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
         style="background-image: url(img/bg-img/hero-bg-small.png); height: 100vh;">
-        <div class="wbnrfz_details">
+        <div class="wbnrfz_details_blog">
             <div class="container">
                 <div class="portfolio-controls d-flex justify-content-between align-items-center">
                     <!-- Filter Buttons -->
