2025-XX Feature Update for Version Next (5.0.x)

--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -173,7 +173,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="300ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/TdU00ue.png" alt="bp12-nws">
@@ -185,7 +185,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeInUp" data-wow-delay="500ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeInUp" data-wow-delay="300ms"
             data-year="2024">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/NyUt8Sc.png" alt="bus-pids">
@@ -197,7 +197,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeInUp" data-wow-delay="700ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeInUp" data-wow-delay="300ms"
             data-year="2024">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/GrXbpDs.png" alt="bus-stop-pole">
@@ -209,7 +209,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="300ms"
             data-year="2022">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/LBGqE6A.png" alt="man-a22-mascot">
@@ -246,7 +246,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video ig mb-30 wow fadeInUp" data-wow-delay="700ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video ig mb-30 wow fadeInUp" data-wow-delay="500ms"
             data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/59TyNel.png" alt="time-tree">
@@ -258,7 +258,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="300ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="500ms"
             data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/homh9Ja.png" alt="more-rep">
@@ -294,7 +294,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 wow fadeInUp" data-wow-delay="700ms"
             data-year="2022">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/l1H7ojG.png" alt="hydration-reg">
@@ -306,7 +306,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="700ms"
             data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/c6T9wC5.png" alt="hydration-reg">
@@ -318,7 +318,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mc mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mc mb-30 wow fadeInUp" data-wow-delay="700ms"
             data-year="2020">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/LSNcrrn.png" alt="hydration-reg">
@@ -330,41 +330,38 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item lg mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item lg mb-30 wow fadeInUp" data-wow-delay="900ms"
             data-year="2017">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/3dYLGoP.png" alt="hydration-reg">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/Wc0jdDu.png" alt="hydration-reg">
+              <div class="hover-content-blog">
                 <h4>Friends Forever Logo Design</h4>
                 <a class="info" href="worksbynrfz/ffl.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/3dYLGoP.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                  class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 wow fadeInUp" data-wow-delay="900ms"
             data-year="2020">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/b29Wusf.png" alt="hydration-reg">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/AsrVHVA.png" alt="hydration-reg">
+              <div class="hover-content-blog">
                 <h4>Infographic Resume</h4>
                 <a class="info" href="worksbynrfz/igra1.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/b29Wusf.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                  class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 wow fadeInUp" data-wow-delay="900ms"
             data-year="2021">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/ZGhtKD7.png" alt="hydration-reg">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/UpTKOk6.png" alt="hydration-reg">
+              <div class="hover-content-blog">
                 <h4>COVID-19 Shopping Habits Infographic</h4>
                 <a class="info" href="worksbynrfz/igra2.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/ZGhtKD7.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                  class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
