--- a/about.html
+++ b/about.html
@@ -53,9 +53,9 @@
 
         <nav class="navbar navbar-mobile">
             <a href="./index.html" class="nav-item">Home</a>
-            <a href="./about.html" class="nav-item active">About</a>
+            <a href="#" class="nav-item active">About</a>
             <a href="./works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
-            <a href="./eicw.html" class="nav-item">EICW</a>
+            <a href="eicw/eicw.html" class="nav-item">EICW</a>
             <a href="./blog.html" class="nav-item">Blog</a>
             <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
                     title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
