--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -58,8 +58,8 @@
     <nav class="navbar navbar-mobile">
       <a href="./index.html" class="nav-item">Home</a>
       <a href="./about.html" class="nav-item">About</a>
-      <a href="./works-by-nrfz.html" class="nav-item active">Works By NRFZ</a>
-      <a href="./eicw.html" class="nav-item">EICW</a>
+      <a href="#" class="nav-item active">Works By NRFZ</a>
+      <a href="eicw/eicw.html" class="nav-item">EICW</a>
       <a href="./blog.html" class="nav-item">Blog</a>
       <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
           title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
